# HashBench

./: .gitignore  CMakeLists.txt  README.md  run.sh  test_config.yaml
cli/: main.cpp
cli/dataset/: CSVDataset.cpp  CSVDataset.hpp
cli/hash/: CRC32.hpp  CityHash.hpp  MurmurHash3.hpp  SHA256.hpp  XXHash.hpp
cli/metric/: CollisionRate.cpp  CollisionRate.hpp  Entropy.cpp  Entropy.hpp  PearsonChi2.cpp  PearsonChi2.hpp  Speed.cpp  Speed.hpp
configs/: config.yaml  config0.yaml  config1.yaml  config2.yaml  config3.yaml
include/core/: BenchmarkContext.hpp  ConfigLoader.hpp  CoreTypes.hpp  IDataset.hpp  IHash.hpp  IMetric.hpp  Registry.hpp  ScoreConfig.hpp  ScoreFunction.hpp
include/dataset/: CSVDataset.hpp
include/hash/: CRC32.hpp  CityHash.hpp  MurmurHash3.hpp  SHA256.hpp  StdHash.hpp  XXHash.hpp
include/metric/: Attack.hpp  CollisionRate.hpp  Entropy.hpp  LoadFactor.hpp  Memory.hpp  ProbeLength.hpp  Speed.hpp  Throughput.hpp
output/: run_1777123148.txt  run_1777123381.txt  run_1777123774.txt  run_1777124124.txt  run_1777124287.txt  run_1777125129.txt  score_1777125522.txt  score_1777125646.txt  score_1777292594.txt
src/core/: ConfigLoader.cpp  Registry.cpp  ScoreFunction.cpp
src/metric/: Attack.cpp  CollisionRate.cpp  Entropy.cpp  Memory.cpp  Speed.cpp  Throughput.cpp
